2010-01-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added following sentance to the help message of --out option:
	--out option is ignored when -Z is used.
	* doc/aria2c.1.txt
	* src/usage_text.h

2010-01-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-save-metadata option to -i list options.
	* doc/aria2c.1.txt
	* src/download_helper.cc

2010-01-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with i586-mingw32msvc-gcc 4.4.2, without any
	additional libraries.
	* src/MultiUrlRequestInfo.cc
	* src/NameResolver.cc
	* src/SelectEventPoll.cc
	* src/SelectEventPoll.h
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/a2netcompat.h
	* src/daemon.cc
	* src/main.cc

2010-01-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo.
	* src/DHTMessageReceiver.cc

2010-01-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that causes segmentation fault if unknown option is
	put in aria2.conf file. BUG#2928303
	* src/OptionParser.cc
	* src/OptionParser.h
	* src/option_processing.cc
	* test/OptionParserTest.cc

2010-01-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Ignore port message with port=0.
	* src/BtPortMessage.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Run autoupdate
	* configure.ac

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated autoconf/automake auxiliary files.
	* INSTALL
	* config.guess
	* config.sub
	* depcomp
	* install-sh
	* m4/intldir.m4
	* missing
	* mkinstalldirs

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused function.
	* src/SharedHandle.h

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Find pooled socket using all cached addresses.
	* src/DNSCache.h
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/InitiateConnectionCommand.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
